# pirateship

./: .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md  build.rs
benches/: chan_bench.rs  crypto_service_bench.rs  rocksdb.rs  sign_bench.rs  storage.rs  tx_serde_bench.rs  verify_bench.rs
contrib/: Cargo.toml
contrib/kms/: frontend.rs  main.rs  payloads.rs
contrib/scitt/: cbor_utils.rs  frontend.rs  main.rs  payloads.rs
contrib/smallbank/: frontend.rs  main.rs  payloads.rs
contrib/svr3/: frontend.rs  main.rs  payloads.rs
deployment/: .gitignore  __prepare-dev-env.sh  azure-deploy.sh  azure-teardown.sh  cleanup-dev-env.sh  container_util.py  deploy-dev-env.sh  docker-deploy.py  docker-teardown.py  ideal_bashrc  launch_container.py  util.py
deployment/azure-aci/: .gitignore  Dockerfile  Notes  arm-template-chris.json  arm-template-confidential.json  arm-template-standard.json  cluster_key.pub  requirements.txt  resolve.js
deployment/azure-aci/setups/: lan.yaml  local.yaml
deployment/azure-tf/: init.sh  main.tf  outputs.tf  providers.tf  ssh.tf  variables.tf
deployment/azure-tf/setups/: dev.tfvars  lan-jumbo.tfvars  lan-nontee-small.tfvars  lan-nontee.tfvars  lan-sev.tfvars  lan-small.tfvars  lan-tdx.tfvars  lan-tiny.tfvars  lan.tfvars  wan-c1.tfvars  wan-c2.tfvars  wan-c3.tfvars  wan-c4.tfvars  wan-c5.tfvars  wan.tfvars  wan_aci.yaml
deployment/docker/: Dockerfile  arm-template-confidential.json  arm-template-standard.json  requirements.txt
deployment/local/: Dockerfile  docker-compose.yml  run-cluster.sh
deprecated/: README.md
deprecated/experiments/: sign_effect.sh  storage_test.sh  wan_experiment.sh  ycsb_experiment.sh
deprecated/scripts/: clean_remote.py  gen_local_config.sh  line_stats.py  local_client_template.json  local_client_template_ycsb_a.json  local_client_template_ycsb_b.json  local_client_template_ycsb_c.json  local_client_template_ycsb_e.json  local_template.json  plot_latency_cdf.py  plot_time_range_client_sweep.py  plot_time_range_sig_sweep.py  run_net_perf.py  run_net_perf.sh  run_param_sweep.sh
deprecated/src/consensus/: backfill.rs  client_reply.rs  commit.rs  log.rs  mod.rs  steady_state.rs  utils.rs  view_change.rs
deprecated/src/execution/: mod.rs
experiments/: README.md  aci_experiment.sh  app_response.toml  disk_check.toml  fast_path.sh  fast_path_experiment.toml  fault_tolerance.sh  lan_experiment.sh  lan_experiment3.toml  lan_experiment4.toml  lan_experiment_aci.toml  lan_experiment_aci_v2.toml  lan_tee_experiments3.toml  setup_nodelist.py  sig_experiment2.toml  sign_effect.sh  storage_effect2.toml  storage_test.sh  wan_experiment.sh  ycsb_experiment.sh  ycsb_experiment.toml
scripts/: README.md  __main__.py  app_experiments.py  autobahn_experiments.py  autobahn_logs.py  ccf_experiments.py  clean_remote.py  container_utils.py  crypto.py  deployment.py  deployment_aci.py  experiments.py  gen_cluster_config.py  gen_local_config.sh  gen_remoteclient_config.sh  lan_tee_experiments.toml  lan_tee_experiments4.toml  line_stats.py  local_client_template.json  local_client_template_ycsb.json  local_client_template_ycsb_b.json  local_client_template_ycsb_c.json  local_client_template_ycsb_d.json  local_template.json  plot_latency_cdf.py  plot_throughput_timeseries.py  plot_time_range_client_sweep.py  plot_time_range_sig_sweep.py  plot_utils.py  requirements.txt  results.py  run_all_protocols.sh  run_equivocation_test.sh  run_fast_path.sh  run_local.sh  run_net_perf.py  run_net_perf.sh  run_param_sweep.sh  run_reconfiguration_test.sh  run_remote.py  (+9 more)
scripts/loadtest/: grafana_query.sql  shamir.py  zipfian.py
scripts_v2/: README.md  __main__.py  app_experiments.py  app_response.toml  autobahn_experiments.py  autobahn_logs.py  config.toml  container_utils.py  deployment.py  deployment_aci.py  equivocation_experiment.toml  evil_experiment.toml  experiments.py  fast_path_experiment.toml  lan_experiment.toml  lan_experiment2.toml  lan_experiment3.toml  lan_experiment4.toml  lan_experiment5.toml  lan_experiment_aci.toml  lan_tee_experiments.toml  lan_tee_experiments2.toml  main.py  requirements.txt  results.py  sample_config.toml  sig_experiment.toml  sig_experiment2.toml  ssh_utils.py  storage_effect.toml  storage_effect2.toml  wan_experiment.toml  ycsb_experiment.toml  ycsb_experiment2.toml
scripts_v2/loadtest/: README.md  Usernames.txt  docker-compose.yml  grafana_query.sql  load.py  loadtest.py  loadtestconfig.json  locust.conf  locustfile.py  shamir.py  toggle.py
src/: lib.rs  main.rs  utils.rs
src/client/: logger.rs  mod.rs  worker.rs
src/client/workload_generators/: blanks.rs  kv_uniform.rs  kv_ycsb.rs  mocksql.rs  mod.rs
src/config/: log4rs.rs  mod.rs  storage.rs  tests.rs  workloads.rs
src/consensus/: app.rs  backfill.rs  batch_proposal.rs  block_sequencer.rs  channel_monitor.rs  client_reply.rs  commit.rs  extra_2pc.rs  fork_receiver.rs  handler.rs  leader_rotation.rs  log.rs  mod.rs  pacemaker.rs  quroum_diversity.rs  reconfiguration.rs  steady_state.rs  tests.rs  timer.rs  utils.rs  view_change.rs
src/consensus/engines/: kvs.rs  mod.rs  null_app.rs  scitt.rs
src/consensus/log/: entry.rs  (+4 more)
src/consensus_legacy/: backfill.rs  client_reply.rs  commit.rs  handler.rs  log.rs  mod.rs  reconfiguration.rs  steady_state.rs  utils.rs  view_change.rs
src/consensus_v2/: app.rs  batch_proposal.rs  block_broadcaster.rs  block_maker.rs  block_sequencer.rs  client_reply.rs  extra_2pc.rs  fork_receiver.rs  frontend.rs  logserver.rs  mod.rs  pacemaker.rs  staging.rs  tests.rs
src/crypto/: aes.rs  ed25519.rs  mod.rs  service.rs  sha256.rs  sha512.rs  tests.rs
src/execution/: mod.rs
src/execution_legacy/: mod.rs
src/proto/: auth.proto  checkpoint.proto  client.proto  consensus.proto  execution.proto  mod.rs  rpc.proto
src/rpc/: auth.rs  client.rs  mod.rs  net.rs  server.rs  tests.rs
src/utils/: agnostic_ref.rs  atomic_struct.rs  file_storage.rs  mod.rs  perf.rs  serialize.rs  storage.rs  storage_service.rs  workload_generator.rs
tests/: gen_local_config.sh  local_template.json
(+47 files in other folders)
