[package]
name = "pft"
version = "0.1.0"
edition = "2021"

[dependencies]
async-recursion = "1.1.1"
bytes = {version = "1.6.0", "features" = ["std", "serde"]}
colog = "1.3.0"
ed25519-dalek = {version = "2.1.1", features = ["alloc", "fast", "std", "zeroize", "pem", "pkcs8"]}
log = "0.4.22"
rand = "0.8.5"
rustls = "0.23.10"
rustls-pemfile = "2.1.2"
serde = {version = "1.0.203", features = ["derive"]}
serde_cbor = "0.11.2"
serde_json = "1.0.120"
tokio = {version = "1.38.0", features = ["full"]}
tokio-rustls = "0.26.0"
prost = "0.12"
prost-types = "0.12"
sha2 = "0.10.8"
hex = "0.4.3"
futures = "0.3.30"
snmalloc-rs = {version = "0.3.6", features = ["native-cpu"]}
core_affinity = "0.8.1"
log4rs = "1.3.0"
byteorder = "1.5.0"
indexmap = "2.2.6"

[build-dependencies]
prost-build = { version = "0.12" }

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }
memory-stats = "1.2.0"

[[bench]]
name = "sign_bench"
harness = false

[[bench]]
name = "verify_bench"
harness = false

[[bench]]
name = "tx_serde_bench"
harness = false

[features]
round_robin_leader = []
always_sign = []
never_sign = []
dynamic_sign = []
quorum_diversity = []
raft_view_change = []
cochin_view_change = []
app_logger = []
lucky_raft = ["round_robin_leader", "never_sign"]
signed_raft = ["round_robin_leader", "dynamic_sign"]
jolteon = ["round_robin_leader", "always_sign", "cochin_view_change"]
diverse_raft = ["round_robin_leader", "dynamic_sign", "quorum_diversity", "raft_view_change"]
cochin = ["round_robin_leader", "dynamic_sign", "quorum_diversity", "cochin_view_change"]
default = ["cochin", "app_logger"]

# @todo: Change how raft_view_change behaves.
# @todo: A feature for jolteon to block on a block's qc.
[profile.release]
panic = "abort"