[package]
name = "contrib"
version = "0.1.0"
edition = "2021"


[dependencies]
actix-web = "4"
reqwest = { version = "0.12", features = ["json"] }
ed25519-dalek = {version = "2.1.1", features = ["alloc", "fast", "std", "zeroize", "pem", "pkcs8", "batch"]}
log = "0.4.22"
rand = "0.8.5"
rustls = "0.23.10"
rustls-pemfile = "2.1.2"
serde = {version = "1.0.203", features = ["derive"]}
serde_cbor = "0.11.2"
serde_json = "1.0.120"
tokio = {version = "1.38.0", features = ["full"]}
tokio-rustls = "0.26.0"
prost = "0.12"
prost-types = "0.12"
sha2 = "0.10.8"
hex = "0.4.3"
futures = "0.3.30"
core_affinity = "0.8.1"
log4rs = "1.3.0"
chrono= "0.4.40"
iso8601 = "0.6.2"


pft = { path = "../"}
async-recursion = "1.1.1"

[[bin]]
name = "kms"
path = "kms/main.rs"

[[bin]]
name = "svr3"
path = "svr3/main.rs"

[[bin]]
name = "smallbank"
path = "smallbank/main.rs"
